@@ -1,5 +1,9 @@
 2009-09-08  Gary Benson  <gbenson@redhat.com>
 
+	* ports/hotspot/src/cpu/zero/vm/stack_zero.hpp: Whitespace changes.
+
+2009-09-08  Gary Benson  <gbenson@redhat.com>
+
 	* ports/hotspot/src/os_cpu/linux_zero/vm/thread_linux_zero.hpp
 	(JavaThread::pop_zero_frame): Tweak.
 
